--- a/index.html
+++ b/index.html
@@ -96,5 +96,50 @@
 
     <script src="js/bot.js"></script>
 
+    <div id="user-modal-backdrop" class="modal-backdrop" style="display: none;"></div>
+    <div id="user-modal" class="modal" style="display: none;">
+        <div class="modal-header">
+            <h3 id="modal-title">Iniciar Sesión</h3>
+            <button id="modal-close-button" class="modal-close">&times;</button>
+        </div>
+        <div class="modal-body">
+            
+            <form id="login-form">
+                <div class="form-group">
+                    <label for="login-email">Email:</label>
+                    <input type="email" id="login-email" name="email" required>
+                </div>
+                <div class="form-group">
+                    <label for="login-password">Contraseña:</label>
+                    <input type="password" id="login-password" name="password" required>
+                </div>
+                <button type="submit" class="modal-button">Iniciar Sesión</button>
+                <div id="login-error" class="modal-error"></div>
+            </form>
+
+            <form id="register-form" style="display: none;">
+                <div class="form-group">
+                    <label for="register-username">Nombre de Usuario:</label>
+                    <input type="text" id="register-username" name="username" required>
+                </div>
+                <div class="form-group">
+                    <label for="register-email">Email:</label>
+                    <input type="email" id="register-email" name="email" required>
+                </div>
+                <div class="form-group">
+                    <label for="register-password">Contraseña:</label>
+                    <input type="password" id="register-password" name="password" required>
+                </div>
+                <button type="submit" class="modal-button register">Registrarme</button>
+                <div id="register-error" class="modal-error"></div>
+            </form>
+
+        </div>
+        <div class="modal-footer">
+            <a href="javascript:void(0);" id="show-register-link">¿No tienes cuenta? Regístrate</a>
+            <a href="javascript:void(0);" id="show-login-link" style="display: none;">¿Ya tienes cuenta? Inicia sesión</a>
+        </div>
+    </div>
+    </body>
 </body>
 </html>
